# LunarVim

./: .ctagsignore  .gitignore  .luacheckrc  .luarc.json  .netrwhist  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  TODO.md  coc-settings.json  config.lua  docusaurus.config.js  init.lua  init.lua.tmp.b  init.lua.tmp.c  init.lua.tmp.d  init.lua.tmp.e  init.lua.tmp.f  init.lua.tmp.g  init.vim  installer.sh  lazy-lock.json  lv-config.lua  lv-settings.lua  notes.txt  nv-settings.lua  nvim-mach2.Dockerfile  package-lock.json  package.json  selene.toml  setupDEB.sh  socials.js  tags  test.py  versions.json  vim.toml  wp_preferences.json
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  feature-form.yaml  general-issue-form.yaml  lsp-issue-form.yaml
.github/workflows/: changelog.yml  cliff.toml  close-inactive-bot.yml  commitlint.config.js  commitlint.yml  docs.yml  format.yaml  install.yaml  lint.yaml  notes.md  plugins.yml  release.yml  spelling.yml
.old/: deoplete.vim
.old/install/: install.sh
blog/: authors.yml
colors/: onedarker.vim  spacegray.vim
docs/: 01-installation.md  01-installing.md  01-introduction.md  02-after-install.md  02-getting-started.md  02-installation.md  02-quick-start.md  03-lv-config.md  03-quick-start.md  03-updating.md  CNAME  Introduction.md  README.md  contributing.md
ftdetect/: astro.lua  bicep.lua  fish.lua  fish.vim  fsharp.lua  json.lua  julia.lua  just.vim  kmonad.vim  nix.lua  plaintex.lua  sol.lua  zig.lua
ftplugin/: asm.lua  beancount.lua  bicep.lua  c.lua  clojure.lua  cmake.lua  cpp.lua  crystal.lua  cs.lua  css.lua  d.lua  dart.lua  docker.lua  dockerfile.lua  elixir.lua  elm.lua  erlang.lua  euphoria3.lua  fish.lua  fortran.lua  gdscript.lua  go.lua  graphql.lua  haskell.lua  hcl.lua  html.lua  java.lua  javascript.lua  javascript.vim  javascriptreact.lua  javascriptreact.vim  json.lua  julia.lua  kotlin.lua  lua.lua  markdown.vim  netrw.lua  nix.lua  objc.lua  perl.lua  (+31 more)
general/: functions.vim  paths.vim  settings.vim  theme.vim
install/: install.sh
keys/: mappings.vim  which-key.vim
lua/: CustomPlugin.lua  augroups.lua  bootstrap.lua  colorscheme.lua  commands.lua  compile.lua  config-telescope.lua  config.lua  default-config.lua  environment.lua  file-watcher.lua  galaxy-line.lua  impatient.lua  keymappings.lua  local-init.lua  lsp-wrapper.lua  lsp-wrapper.vim  lv-config-user.lua  lv-globals.lua  lv-utils.lua  main.lua  nv-globals.lua  nvcodeline.lua  plug-colorizer.lua  plugin-loader.lua  plugin_loader.lua  plugins.lua  rainbow.lua  settings.lua  test.lua  treesitter.lua  utils.lua  web-devicons-config.lua
modules/: airline.vim  ale.vim  coc.vim  colorizer.vim  ctrlp.vim  denite.vim  deoplete.vim  echodoc.vim  emmet.vim  fzf.vim  general.vim  goyo-limelight.vim  gutentags.vim  gutentags_plus.vim  language_server.vim  markdowm_preview.vim  markdown-preview.vim  neosnippets.vim  nerdtree.vim  nodepath.vim  plugins.vim  polyglot.vim  pydocstring.vim  pythonpath.vim  rainbow.vim  ranger.vim  relativenums.vim  sneak.vim  startify.vim  terminal.vim  test.vim  theme.vim  vim-which-key.vim  vim_wiki.vim
old/: init.vim  setupRHEL.sh
plug-config/: ale.vim  anyfold.vim  asynctask.vim  auto-pairs.vim  barbar.vim  better-whitespace.vim  bracey.vim  closetags.vim  coc.vim  codi.vim  commentary.vim  dial.vim  easymotion.vim  far.vim  floaterm.vim  fugitive.vim  fzf-preview.vim  fzf.vim  git-messenger.vim  gitgutter.vim  goyo.vim  highlightyank.vim  illuminate.vim  jinja.vim  leetcode.vim  lightbulb.vim  lsp-config.vim  lsp-saga.vim  markdown-preview.vim  maximizer.vim  minimap.vim  neovide.vim  nerd-commenter.vim  nerd-tree.vim  nvimtree-config.vim  peekaboo.vim  polyglot.vim  quickscope.vim  rainbow.vim  ranger.vim  (+18 more)
plugin/: packer_compiled.lua  packer_compiled.vim
plugs/: plugins.vim
scripts/: autogen_docs.lua  autogen_docs.sh  autogen_lsp_docs.lua  autogen_plugins_docs.lua  core_plugins.json
snapshots/: default.json
snippets/: package.json  python.json
snips/: markdown.snippets  typescript.snippets
spell/: en.utf-8.add  en.utf-8.add.spl
syntax/: java.vim
tests/: bootstrap_spec.lua  config_loader_spec.lua  helpers.lua  lsp_spec.lua  minimal_init.lua  minimal_lsp.lua  minimal_rtp.lua  plugins_load_spec.lua
themes/: .onedark.vim.swp  airline.vim  eleline.vim  lightline.vim  material.vim  monokai.vim  nord.vim  nvcode.vim  onedark-buddy.vim  onedark.vim  sonokai.vim  spaceline.vim  syntax.vim
translations/: README.es.md
utils/: .stylua.toml  easy-install-language-servers.sh  efm-config.yaml  farignore  init.lua  init.vim  install-docker.sh  install.sh  install_latest_neovim.sh  installer.sh  tasks.ini
utils/packaging/: CMakeLists.txt  CMakeLists.txt.in
utils/packaging/assets/: lvim  lvim.ps1
utils/packaging/cmake/: BundlePlugins.cmake  GenerateVersion.cmake  Packaging.cmake
utils/packaging/scripts/: appimage.sh
vim-plug/: extras.vim  plugins.vim
vimscript/: functions.vim
vscode/: settings.vim  windows.vim
(+775 files in other folders)
